tests/parsing/cmc/errors/128.expected
File "tests/parsing/cmc/errors/128.cmc", line 1, character 27-28:
1 | (define-system sys :subsys )
                               ^
Error while parsing a subsystem declaration, read a closing parenthesis,
      but expected an s-expression of the form  `(local_name (subsystem_name
      var_a var_b ...))`.
